<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateListActivity">

    <EditText
        android:id="@+id/edit_new_shopping_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_add_name"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <EditText
        android:id="@+id/edit_image_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:focusable="false"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_no_image_selected"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/upload_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_new_shopping_list"
        app:layout_constraintVertical_bias="0.253"
        tools:ignore="Deprecated" />

    <Button
        android:id="@+id/button_createProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_create"
        android:textColor="@color/buttonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/upload_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:text="@string/upload_image"
        app:layout_constraintBottom_toTopOf="@+id/button_createProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>