<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_add_name"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_createProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <EditText
        android:id="@+id/editTextQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_add_quantity"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/button_createProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintVertical_bias="0.219" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/button_createProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextQuantity"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_createProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_createProduct"
        android:textColor="@color/buttonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>